# CMakeList.txt: projekt CMake dla elementu 8.1, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (8.1 "8.1.c" "8.1.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
